Added some doc.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 The following projects show the usage of SystemC for structural design. 
-
+Please see the doc directory for how to use this tutorial.
